--- a/apps/index.html
+++ b/apps/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/hypervitals.svg" />
+		<link rel="icon" type="image/svg+xml" href="/m0_tollfinder.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>m0_tollfinder</title>
 	</head>
